add readme and logs for handlers
