# swagger-api/swagger.yml
@@ -143,12 +143,19 @@ definitions:
         type: string
       role:
         type: string
+    required:
+      - email
+      - password
+      - role
   UserSignIn:
     properties:
       email:
         type: string
       password:
         type: string
+    required:
+      - email
+      - password
   GetActor:
     properties:
       name:
